Project-01/force-app/main/default/objects/return_item__c/return_item__c.object-meta.xml
<CustomObject>
    <label>Return Detail</label>
    <nameField>
        <displayFormat>RI-{0000}</displayFormat>
        <label>Return item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>