Project-01/force-app/main/default/objects/return_item__c/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product SKU</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>return_items</relationshipName>
    <type>Lookup</type>
</CustomField>